upload feature chat WebSocket and Deploy Docker